--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
             <legend>Icons</legend>
             <table>
                <tr>
-                  <td class="bomb-svg" data-palette="bombDetonated"></td>
+                  <td data-mine="detonated"></td>
                   <td>Detonated Bomb</td>
-                  <td class="bomb-svg" data-palette="bombRegular"></td>
+                  <td data-mine="regular"></td>
                   <td>Unmarked Bomb</td>
                </tr>
                <tr>
-                  <td class="bomb-svg" data-palette="bombFlagged"></td>
+                  <td data-mine="flagged"></td>
                   <td>Marked Bomb</td>
                   <td><img class="bomb-ex" src="images/flag.svg" alt="Flag"></td>
                   <td>Bomb Marker</td>
                </tr>
                <tr>
-                  <td class="bomb-svg" data-palette="bombGuessed"></td>
+                  <td data-mine="guessed"></td>
                   <td>Guessed Bomb</td>
                   <td><img class="bomb-ex" src="images/que.svg" alt="Flag"></td>
                   <td>Bomb Guess</td>
