Working on issues
Backend for #3 done
Delaying production of #4
Compatbility checking

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="robots" content="index, nofollow">
       <meta name="html-valid" content="HTML5, ARIA, SVG1.1, MathML 2.0">
-      <meta name="css-valid" content="CSSL 3">
+      <meta name="css-valid" content="CSS 3">
    </head>
 
    <body>
@@ -76,6 +76,11 @@
                   <td>Bomb Guess</td>
                </tr>
             </table>
+         </fieldset>
+
+         <fieldset id="misc-demo">
+            <legend>Other Settings</legend>
+            <p>Click the bombs above to change their colors ().</p>
          </fieldset>
 
          <!-- <fieldset id="near-demo">
