--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
       <!--
          Author      : Evan Young
          Date        : 03/03/2018
-         Revision    : 03/15/2018
+         Revision    : 03/18/2018
          Description : Budget Minesweeper
       -->
 
       <title>Mi'sweep</title>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
       <link rel="stylesheet" href="styles.css">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
       <script defer src="scripts.js" charset="utf-8"></script>
 
       <meta charset="utf-8">
       <meta name="author" content="Evan Young">
       <meta name="copyright" content="&copy; 2018 Evan Young">
-      <meta name="date" content="03/15/2018">
+      <meta name="date" content="03/18/2018">
       <meta name="description" content="Budget Minesweeper">
       <meta name="keywords" content="minesweep,classic">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -80,7 +80,6 @@
 
          <fieldset id="misc-demo">
             <legend>Other Settings</legend>
-            <p>Click the bombs above to change their colors ().</p>
          </fieldset>
 
          <!-- <fieldset id="near-demo">
