--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
             <legend>Difficulty</legend>
             <input type="button" value="Beginner" onclick="difficulty.beginner()">
             <input type="button" value="Intermediate" onclick="difficulty.intermediate()">
-            <input type="button" value="Expert" onclick="difficulty.expert()">
-            <input type="button" value="Custom" onclick="document.location.reload()">
+            <input type="button" value="Expert" onclick="difficulty.expert()"><br>
             <input type="number" data-storage-value="width">
             <input type="number" data-storage-value="height">
             <input type="number" name="inp-mines">
@@ -80,6 +79,7 @@
 
          <fieldset id="misc-demo">
             <legend>Other Settings</legend>
+            <input type="checkbox" data-storage-value="postShown">Show Post-Hidden Cells Differently
          </fieldset>
 
          <!-- <fieldset id="near-demo">
