--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                <tr>
                   <td data-mine="detonated"></td>
                   <td>Detonated Bomb</td>
-                  <td data-mine="regular"></td>
+                  <td data-mine="default"></td>
                   <td>Unmarked Bomb</td>
                </tr>
                <tr>
@@ -79,7 +79,7 @@
 
          <fieldset id="misc-demo">
             <legend>Other Settings</legend>
-            <input type="checkbox" data-storage-value="postShown">Show Post-Hidden Cells Differently
+            <input type="checkbox" data-storage-value="postShown">Show Post-Hidden Cells Differently<br>
          </fieldset>
 
          <!-- <fieldset id="near-demo">
@@ -103,7 +103,7 @@
 
       <div id="allHidden">
          <input type="color" data-storage-value="bombDetonated" class="inp-col">
-         <input type="color" data-storage-value="bombRegular" class="inp-col">
+         <input type="color" data-storage-value="bombDefault" class="inp-col">
          <input type="color" data-storage-value="bombFlagged" class="inp-col">
          <input type="color" data-storage-value="bombGuessed" class="inp-col">
       </div>
