Adds the option to shake the screen when the game is lost Uses direct cell references rather than coordinates where possible Documentation
Resolves #7
Uses more asynchronous functions to improve performance

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
          <fieldset id="misc-demo">
             <legend>Other Settings</legend>
             <input type="checkbox" data-storage-value="postShown">Show Post-Hidden Cells Differently<br>
+            <input type="checkbox" data-storage-value="explodeShake">Shake The Board When A Bomb Explodes
          </fieldset>
 
          <!-- <fieldset id="near-demo">
