--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
       <!--
          Author      : Evan Young
          Date        : 03/03/2018
-         Revision    : 03/18/2018
+         Revision    : 03/20/2018
          Description : Budget Minesweeper
       -->
 
       <title>Mi'sweep</title>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-      <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="styles.min.css">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
-      <script defer src="scripts.js" charset="utf-8"></script>
+      <script defer src="scripts.min.js" charset="utf-8"></script>
 
       <meta charset="utf-8">
       <meta name="author" content="Evan Young">
       <meta name="copyright" content="&copy; 2018 Evan Young">
-      <meta name="date" content="03/18/2018">
+      <meta name="date" content="03/20/2018">
       <meta name="description" content="Budget Minesweeper">
       <meta name="keywords" content="minesweep,classic">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,24 +82,6 @@
             <input type="checkbox" data-storage-value="postShown">Show Post-Hidden Cells Differently<br>
             <input type="checkbox" data-storage-value="explodeShake">Shake The Board When A Bomb Explodes
          </fieldset>
-
-         <!-- <fieldset id="near-demo">
-            <legend>Nearby</legend>
-            <table>
-               <tr>
-                  <td data-near="1">1 Mine</td>
-                  <td data-near="2">2 Mines</td>
-                  <td data-near="3">3 Mines</td>
-                  <td data-near="4">4 Mines</td>
-               </tr>
-               <tr>
-                  <td data-near="5">5 Mines</td>
-                  <td data-near="6">6 Mines</td>
-                  <td data-near="7">7 Mines</td>
-                  <td data-near="8">8 Mines</td>
-               </tr>
-            </table>
-         </fieldset> -->
       </div>
 
       <div id="allHidden">
