--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
       <title>Mi'sweep</title>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
       <link rel="stylesheet" href="styles.min.css">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+      
+      <!-- [if IE]
+      <script defer src="scripts.ie.js" charset="utf-8"></script>
+      [endif] -->
+      <!--[if !IE]><!-->
       <script defer src="scripts.min.js" charset="utf-8"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
+      <!--<![endif]-->
 
       <meta charset="utf-8">
       <meta name="author" content="Evan Young">
